@@ -1,6 +1,10 @@
 1.0.4 - 201210xx
 ================
 
+Broker:
+- Deal with poll() POLLIN/POLLOUT before POLL[RD]HUP to correctly handle the
+  case where a client sends data and immediately closes its socket.
+
 Library:
 - Fix memory leak with messages of QoS=2. Fixes bug #1064981.
 - Fix potential thread synchronisation problem with outgoing packets in the
